# raine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/artifact_packaging/: export.py  inference.py  main.py
examples/artifact_packaging/exported/my_model/: pylock.toml  pyproject.toml
examples/artifact_packaging/exported/my_model/code/: api.py
examples/artifact_packaging/exported/my_model/code/modules/: module.py
examples/artifact_packaging/model_artifact/my_model/: artifacts.json  pyproject.toml
examples/serving_torch_model/: create_local_serving.py
examples/webdataset/: tabular2webdataset.py
raine/src/dataset/: tag_map.txt
raine/src/dataset/beam/: components.py  data_processor.py  example_gen.py  utils.py
raine/src/evaluation/beam/: components.py  evaluator.py
raine/src/serving/tfserve/: Dockerfile
raine/src/serving/torchserve/: Dockerfile  README.md  build.sh  config.properties  save_model.py  torchserve_client.py  torchserve_config.yaml
raine/src/serving/torchserve/proto/: inference.proto  inference_pb2.py  management.proto  management_pb2.py
raine/src/setup/: local_minikube_setup.sh
raine/src/utils/: docker_tools.py
raine/tests/: test_beam_data_processor.py  test_beam_evaluator.py  test_beam_examplegen.py  test_beam_metrics.py
raine/tests/data/: input.csv  input.parquet  tag_map.txt
src/raine/: __init__.py
src/raine/dataset/: feast_featurestore.py
src/raine/dataset/beam/: archivefileio.py  components.py  data_processor.py  example_gen.py  example_pb2.py  utils.py
src/raine/evaluation/beam/: components.py  evaluator.py  metrics.py
src/raine/serve/: pusher.py
src/raine/serve/artifacts/: __init__.py  artifacts.py  code_trace.py  context.py  deps_trace.py  helper.py
src/raine/serving/artifacts/: __init__.py  artifacts.py  code_trace.py  context.py  deps_trace.py  helper.py  utils.py
src/raine/training/runner/: kubeflow_runner.py  local_runner.py  vertex_runner.py
src/raine/utils/: beam_routines.py  settings_utils.py
tests/: conftest.py  test_artifact_bundle.py  test_beam_data_processor.py  test_beam_evaluator.py  test_beam_examplegen.py  test_beam_metrics.py  test_code_trace.py  test_runners.py  test_staging_helper.py  test_version.py
tests/data/: examples.csv  input.tfrecord  input_bq.sql
