[project]
name = "raine"
version = "0.1.1"
description = "MLOps toolkit with reusable Kubeflow components"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "sapphire008", email = "cui23327@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.0,<3.0)",
    "pandas (>=2.0,<3.0)",
    "docker==7.1.0",
    "dynaconf==3.2.13",
]

[project.optional-dependencies]
gcp = [
    "apache-beam[gcp]==2.73.0",
    "google-cloud-aiplatform==1.154.0",
]
torch = [
    "torch==2.8.0",
]
train = [
    "kfp==2.16.1",
    "webdataset==1.0.2",
]
serve = [
    "litserve==0.2.17",
]

[dependency-groups]
dev = [
    "black==24.4.2",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools"]
