[project]
name = "raine"
version = "0.1.4"
description = "MLOps toolkit"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Edward Cui", email = "cui23327@gmail.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dynaconf>=3.0.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-aiplatform==1.148.0",
    "google-cloud-storage>=2.19.0",
]
torch = [
    "torch==2.8.0",
]
train = [
    "kfp==2.16.1",
    "webdataset==1.0.2",
]
serve = [
    "litserve==0.2.17",
]
data = [
    "apache-beam[gcp]==2.73.0",
]

[dependency-groups]
dev = [
    "black==24.4.2",
    "ipython>=9.14.0",
    "pytest>=8.2.2",
    "uv>=0.11.0,<0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]


[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools"]
