[project]
name = "raine-artifact"
version = "0.1.0"
description = "Runtime dependencies for raine model artifacts"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dynaconf==3.2.13",
    "pyyaml>=6.0.3",
    "litserve==0.2.17",
    "torch==2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
